app/src/blocks/aside/aside.scss
.aside {
	position: fixed;
	top: 0;
	right: -250px;
	bottom: 0;
	width: 250px;
	max-width: 67%;
	background: white;
	overflow: auto;
	transition: $duration / 2 ease;
	z-index: 30;

	&__list {
		list-style-type: none;
		padding: 70px 0 15px;
		margin: 0;
	}

	&__item {

		&:hover {

			.aside {
				// =====

				&__link {
					color: $color-main;
				}
			}
		}

		&_sub {

			.aside {
				// =====

				&__link {
					position: relative;

					&::after {
						content: '\f107';
						font-family: $font-fa;
						position: absolute;
						right: 15px;
						transition: $duration ease transform;
					}
				}
			}
		}

		&_opened {

			.aside {
				// =====

				&__link {

					&::after {
						transform: rotate(180deg);
					}
				}
			}
		}
	}

	&__link {
		text-decoration: none;
		padding: 8px 15px;
		line-height: 1.1;
		display: block;
	}

	&__sub-list {
		list-style-type: none;
		padding: 5px 0 10px;
		margin: 0;
		display: none;
	}

	&__sub-item {

	}

	&__sub-link {
		text-decoration: none;
		padding: 8px 15px 8px 30px;
		display: block;
	}

	&_opened {
		right: 0;
		transition: $duration ease;
	}
}

